--- a/directbak.yaml
+++ b/directbak.yaml
@@ -476,7 +476,6 @@ payload:
   - '+.05935.com'
   - '+.0593666.com'
   - '+.0594.com'
-  - '+.059400.com'
   - '+.0595job.com'
   - '+.0595rc.com'
   - '+.0596fc.com'
@@ -5705,6 +5704,7 @@ payload:
   - '+.666wan.com'
   - '+.666wan.net'
   - '+.666xinxin.com'
+  - '+.6673p.com'
   - '+.6677000.com'
   - '+.667744.com'
   - '+.6677493.com'
@@ -6151,6 +6151,7 @@ payload:
   - '+.777524.com'
   - '+.7775367.com'
   - '+.777684a.com'
+  - '+.777lala.com'
   - '+.777moban.com'
   - '+.777n.com'
   - '+.77833.net'
@@ -7185,7 +7186,6 @@ payload:
   - '+.92ay.com'
   - '+.92bbs.net'
   - '+.92bizhi.com'
-  - '+.92byg.com'
   - '+.92caijing.com'
   - '+.92cloud.com'
   - '+.92cy.cc'
@@ -7900,6 +7900,7 @@ payload:
   - '+.aboatedu.com'
   - '+.aboboo.com'
   - '+.aboilgame.com'
+  - '+.aboluojihua.com'
   - '+.aboutcg.com'
   - '+.aboutcg.net'
   - '+.aboutcg.org'
@@ -9656,6 +9657,7 @@ payload:
   - '+.aqdstatic.com'
   - '+.aqee.net'
   - '+.aqfen.com'
+  - '+.aqhbq.com'
   - '+.aqhuayu.com'
   - '+.aqidb.org'
   - '+.aqioo.com'
@@ -10190,6 +10192,7 @@ payload:
   - '+.b2b98.net'
   - '+.b2baa.com'
   - '+.b2bic.com'
+  - '+.b2bname.com'
   - '+.b2bneican.com'
   - '+.b2bvip.com'
   - '+.b2bvip.net'
@@ -10199,7 +10202,6 @@ payload:
   - '+.b355.cc'
   - '+.b35ii.com'
   - '+.b3inside.com'
-  - '+.b3log.org'
   - '+.b3logfile.com'
   - '+.b5200.net'
   - '+.b5b6.com'
@@ -13000,7 +13002,6 @@ payload:
   - '+.c.citic'
   - '+.c.team'
   - '+.c0594.com'
-  - '+.c0de4fun.com'
   - '+.c0ks.com'
   - '+.c1042.com'
   - '+.c1ass.com'
@@ -15975,7 +15976,6 @@ payload:
   - '+.ckgcjl.com'
   - '+.ckimg.com'
   - '+.ckjr001.com'
-  - '+.ckkpp.com'
   - '+.ckmov.com'
   - '+.ckook.com'
   - '+.ckplayer.com'
@@ -21525,6 +21525,7 @@ payload:
   - '+.eggjs.org'
   - '+.eggscute.com'
   - '+.eggtt.com'
+  - '+.eghnmj.xyz'
   - '+.egonetworks.org'
   - '+.egongzheng.com'
   - '+.egoonet.com'
@@ -21552,7 +21553,6 @@ payload:
   - '+.ehedco.com'
   - '+.ehiman.com'
   - '+.ehinvest.hk'
-  - '+.ehn3.com'
   - '+.ehome5.com'
   - '+.ehome8.com'
   - '+.ehomeclouds.com'
@@ -22432,6 +22432,7 @@ payload:
   - '+.faceh5.com'
   - '+.facehufu.com'
   - '+.faceid.com'
+  - '+.faceminiproject.online'
   - '+.faceplusplus.com'
   - '+.faceu.mobi'
   - '+.faceu.net'
@@ -22763,7 +22764,6 @@ payload:
   - '+.faxingchina.com'
   - '+.faxingcn.com'
   - '+.faxingnet.com'
-  - '+.faxingshuo.com'
   - '+.faxingsj.com'
   - '+.faxingtp.com'
   - '+.faxingtupian.com'
@@ -23131,6 +23131,7 @@ payload:
   - '+.fffzgh.com'
   - '+.ffhre.com'
   - '+.ffis.me'
+  - '+.ffjd1.com'
   - '+.ffmarket.com'
   - '+.ffmulu.com'
   - '+.ffpedia.com'
@@ -24584,6 +24585,7 @@ payload:
   - '+.gdkz88.com'
   - '+.gdlins.com'
   - '+.gdlppow.com'
+  - '+.gdlsgz.com'
   - '+.gdmappress.com'
   - '+.gdmingshizx.com'
   - '+.gdmm.com'
@@ -32904,6 +32906,7 @@ payload:
   - '+.jianhui.org'
   - '+.jianhui666.com'
   - '+.jianianle.com'
+  - '+.jianick.com'
   - '+.jianjian.tv'
   - '+.jianjiaobuluo.com'
   - '+.jianjie8.com'
@@ -33856,6 +33859,7 @@ payload:
   - '+.jmtsg.com'
   - '+.jmxfw.com'
   - '+.jmxw.net'
+  - '+.jmykw.com'
   - '+.jmyna.net'
   - '+.jmzcgs.com'
   - '+.jmzns.com'
@@ -36631,7 +36635,6 @@ payload:
   - '+.lantian.tv'
   - '+.lantinglou.com'
   - '+.lantingmingjia.com'
-  - '+.lantouzi.com'
   - '+.lantunyouxi.com'
   - '+.lanuss.com'
   - '+.lanvige.com'
@@ -36865,7 +36868,6 @@ payload:
   - '+.lczyy.com'
   - '+.ld0766.com'
   - '+.ld12366.com'
-  - '+.ld246.com'
   - '+.ldcache.net'
   - '+.ldcang.com'
   - '+.ldd.me'
@@ -37290,7 +37292,6 @@ payload:
   - '+.lhflh.com'
   - '+.lhggjd.org'
   - '+.lhh.la'
-  - '+.lhidc.net'
   - '+.lhlqw.com'
   - '+.lhm8.com'
   - '+.lhrbszb.com'
@@ -40770,7 +40771,6 @@ payload:
   - '+.mlyfc.net'
   - '+.mlyfcyy.com'
   - '+.mlzcn.com'
-  - '+.mm.cc'
   - '+.mm.com'
   - '+.mm111.net'
   - '+.mm12581.com'
@@ -41960,6 +41960,7 @@ payload:
   - '+.nantaihu.com'
   - '+.nantongbike.com'
   - '+.nantonghua.net'
+  - '+.nantongle.com'
   - '+.nanxueqx.com'
   - '+.nanxunjob.com'
   - '+.nanyangcable.com'
@@ -42062,6 +42063,7 @@ payload:
   - '+.nbweekly.com'
   - '+.nbyang.com'
   - '+.nbyeda.com'
+  - '+.nbz4jc2j.com'
   - '+.ncacg.org'
   - '+.ncartfoundation.org'
   - '+.ncdxbbs.com'
@@ -51267,7 +51269,6 @@ payload:
   - '+.spdiy.net'
   - '+.spdl.com'
   - '+.spdydns.com'
-  - '+.spe777.com'
   - '+.specialcdnstatus.com'
   - '+.speed-dns.cc'
   - '+.speed-idc.com'
@@ -51621,6 +51622,7 @@ payload:
   - '+.strongcms.net'
   - '+.strongled.com'
   - '+.stswjx.com'
+  - '+.stubbornhuang.com'
   - '+.studa.net'
   - '+.studentboss.com'
   - '+.studioartiz.com'
@@ -52673,7 +52675,6 @@ payload:
   - '+.tainicement.net'
   - '+.taipingyangyinshua.com'
   - '+.taiqigame.com'
-  - '+.taiqingjiu.com'
   - '+.tairan.com'
   - '+.taishangshiwu.com'
   - '+.taishenghb.com'
@@ -53673,6 +53674,7 @@ payload:
   - '+.ticwear.com'
   - '+.tida120.com'
   - '+.tidb.io'
+  - '+.tideswing.fun'
   - '+.tidi.mobi'
   - '+.tiduyun.com'
   - '+.tieba.com'
@@ -56867,6 +56869,7 @@ payload:
   - '+.wangjunwei.com'
   - '+.wangkl.com'
   - '+.wangkx.xyz'
+  - '+.wangl903.com'
   - '+.wangle.com'
   - '+.wanglibao.com'
   - '+.wanglids.com'
@@ -56932,7 +56935,6 @@ payload:
   - '+.wangyin.com'
   - '+.wangyou.com'
   - '+.wangyou2.com'
-  - '+.wangyq.com'
   - '+.wangyuan.com'
   - '+.wangyuegame.com'
   - '+.wangyutang.com'
@@ -58868,6 +58870,7 @@ payload:
   - '+.woziku.com'
   - '+.wp-china-yes.net'
   - '+.wp-h.com'
+  - '+.wp10.cc'
   - '+.wpan123.com'
   - '+.wpceo.com'
   - '+.wpchina.org'
@@ -63650,6 +63653,7 @@ payload:
   - '+.ynshf.com'
   - '+.ynshijian.com'
   - '+.ynsjg.com'
+  - '+.ynsjnls.com'
   - '+.ynsqx.com'
   - '+.ynteng.com'
   - '+.yntsg.com'
@@ -65213,6 +65217,7 @@ payload:
   - '+.zahtb.com'
   - '+.zahuibaike.com'
   - '+.zahuishi.com'
+  - '+.zai-art.com'
   - '+.zaibei.net'
   - '+.zaichengdu.com'
   - '+.zaidu.la'
@@ -65787,6 +65792,7 @@ payload:
   - '+.zhanggang.net'
   - '+.zhanggao.club'
   - '+.zhanggaoyuan.com'
+  - '+.zhanggee.com'
   - '+.zhanghaijun.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
@@ -66038,6 +66044,7 @@ payload:
   - '+.zhenjiahuo.com'
   - '+.zhenjiang-marathon.com'
   - '+.zhenleishan.com'
+  - '+.zhenlian.online'
   - '+.zhenlinxin.com'
   - '+.zhenlishen.com'
   - '+.zhenniu24.com'
@@ -67019,7 +67026,6 @@ payload:
   - '+.zjipc.com'
   - '+.zjj17u.com'
   - '+.zjj21.com'
-  - '+.zjj588.com'
   - '+.zjjd.org'
   - '+.zjjdamuzhi.com'
   - '+.zjjgcyz.com'
