--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1102,7 +1102,6 @@ payload:
   - '+.11chuangye.com'
   - '+.11dns.com'
   - '+.11dream.net'
-  - '+.11dy.net'
   - '+.11fldxn.com'
   - '+.11flow.com'
   - '+.11g.com'
@@ -1389,7 +1388,6 @@ payload:
   - '+.148la.com'
   - '+.14hj.com'
   - '+.14xd.com'
-  - '+.14zhu.com'
   - '+.150072.com'
   - '+.150075.com'
   - '+.1502828.com'
@@ -2118,7 +2116,6 @@ payload:
   - '+.2.gy'
   - '+.20.com'
   - '+.200.net'
-  - '+.200.sh'
   - '+.2000200.com'
   - '+.2000888.com'
   - '+.2000dns.com'
@@ -5136,7 +5133,6 @@ payload:
   - '+.576tv.com'
   - '+.57821.com'
   - '+.579609.com'
-  - '+.579944.com'
   - '+.57ac.com'
   - '+.57auto.com'
   - '+.57dj.com'
@@ -6154,7 +6150,6 @@ payload:
   - '+.777lala.com'
   - '+.777moban.com'
   - '+.777n.com'
-  - '+.77833.net'
   - '+.778669.com'
   - '+.7788.com'
   - '+.7788js.com'
@@ -6731,6 +6726,7 @@ payload:
   - '+.88582.com'
   - '+.8858a.com'
   - '+.8860.net'
+  - '+.8864.com'
   - '+.8864.org'
   - '+.8866.org'
   - '+.886966.com'
@@ -6778,7 +6774,6 @@ payload:
   - '+.88ng.com'
   - '+.88pets.com'
   - '+.88popo.com'
-  - '+.88q.com'
   - '+.88rpg.net'
   - '+.88tang.com'
   - '+.88tph.com'
@@ -8152,7 +8147,6 @@ payload:
   - '+.adups.com'
   - '+.adutou.com'
   - '+.adutp.com'
-  - '+.adv5678.com'
   - '+.advgbid.com'
   - '+.adview.com'
   - '+.advuser.com'
@@ -8522,7 +8516,6 @@ payload:
   - '+.ailongmiao.com'
   - '+.ailuntan.com'
   - '+.ailvxing.com'
-  - '+.ailvzhidu.com'
   - '+.aimagang.com'
   - '+.aimaoji.com'
   - '+.aimapp.net'
@@ -8944,6 +8937,7 @@ payload:
   - '+.aliyunddos0030.com'
   - '+.aliyunddos1001.com'
   - '+.aliyunddos1002.com'
+  - '+.aliyunddos1003.com'
   - '+.aliyunddos1004.com'
   - '+.aliyunddos1005.com'
   - '+.aliyunddos1006.com'
@@ -9282,6 +9276,7 @@ payload:
   - '+.anquanzhuomian.com'
   - '+.anqunzhi.com'
   - '+.anrayer.com'
+  - '+.anren.org'
   - '+.anrenmind.com'
   - '+.anruichina.com'
   - '+.ansgo.com'
@@ -10202,7 +10197,6 @@ payload:
   - '+.b355.cc'
   - '+.b35ii.com'
   - '+.b3inside.com'
-  - '+.b3logfile.com'
   - '+.b5200.net'
   - '+.b5b6.com'
   - '+.b5esports.me'
@@ -13888,6 +13882,7 @@ payload:
   - '+.cdqcp.com'
   - '+.cdqph.com'
   - '+.cdqss.com'
+  - '+.cdrbs.net'
   - '+.cdren.com'
   - '+.cdren.net'
   - '+.cdronghai.com'
@@ -15305,7 +15300,6 @@ payload:
   - '+.chinatranslation.net'
   - '+.chinatravel.net'
   - '+.chinatraveldepot.com'
-  - '+.chinatraveldesigner.com'
   - '+.chinatruck.org'
   - '+.chinatrucks.com'
   - '+.chinatsi.com'
@@ -16383,7 +16377,6 @@ payload:
   - '+.cncncn.com'
   - '+.cncnet.net'
   - '+.cncnki.com'
-  - '+.cncoders.net'
   - '+.cncolour.com'
   - '+.cncondom.com'
   - '+.cncookernet.com'
@@ -19527,7 +19520,6 @@ payload:
   - '+.dingdean.com'
   - '+.dingdian.la'
   - '+.dingdianku.com'
-  - '+.dingdiann.com'
   - '+.dingdiansk.com'
   - '+.dingdianzw.com'
   - '+.dingding.com'
@@ -19797,7 +19789,6 @@ payload:
   - '+.dmaku.com'
   - '+.dmall.com'
   - '+.dmallcdn.com'
-  - '+.dmayun.com'
   - '+.dmbcdn.com'
   - '+.dmcbs.com'
   - '+.dmcdn.com'
@@ -22988,7 +22979,6 @@ payload:
   - '+.fencescn.com'
   - '+.fenduotie.com'
   - '+.fenfen.com'
-  - '+.fenfenchaquan.com'
   - '+.fenfenriji.com'
   - '+.fenfenwz.com'
   - '+.fenfenzh.cc'
@@ -23200,7 +23190,6 @@ payload:
   - '+.filcochina.com'
   - '+.file001.com'
   - '+.filediag.com'
-  - '+.filetender.net'
   - '+.fillersmart.com'
   - '+.fillseo.com'
   - '+.films666.com'
@@ -24610,7 +24599,6 @@ payload:
   - '+.gdscse.net'
   - '+.gdscw.com'
   - '+.gdsoq.com'
-  - '+.gdspeedtest.com'
   - '+.gdsports.net'
   - '+.gdsrcw.com'
   - '+.gdssl.image-gmkt.com'
@@ -25684,7 +25672,6 @@ payload:
   - '+.gsbankmall.com'
   - '+.gscaijing.com'
   - '+.gscidc.net'
-  - '+.gsdayu.com'
   - '+.gsdk.tv'
   - '+.gsdlcn.com'
   - '+.gsdpw.com'
@@ -27879,7 +27866,6 @@ payload:
   - '+.heyguo.com'
   - '+.heyi.com'
   - '+.heyinguanli.com'
-  - '+.heylinux.com'
   - '+.heymore.com'
   - '+.heyou365.com'
   - '+.heyou51.com'
@@ -28492,6 +28478,7 @@ payload:
   - '+.hnnzwhyy.com'
   - '+.hnoceanrace.com'
   - '+.hnol.net'
+  - '+.hnpfw.com'
   - '+.hnpet.net'
   - '+.hnpolice.com'
   - '+.hnpost.com'
@@ -29765,6 +29752,7 @@ payload:
   - '+.huosubtc.com'
   - '+.huotan.com'
   - '+.huowan.com'
+  - '+.huoxiaoer.net'
   - '+.huoxing24.com'
   - '+.huoxingba.com'
   - '+.huoxingzi.com'
@@ -30696,7 +30684,6 @@ payload:
   - '+.idu9.com'
   - '+.idudo.com'
   - '+.iduo8.com'
-  - '+.iduobao.net'
   - '+.iduochong.com'
   - '+.iduoha.com'
   - '+.iduokan.net'
@@ -32280,7 +32267,6 @@ payload:
   - '+.iyenei.com'
   - '+.iyingdi.com'
   - '+.iyingji.com'
-  - '+.iyinxun.com'
   - '+.iyiou.com'
   - '+.iyiqi.com'
   - '+.iyishengyuan.com'
@@ -32384,7 +32370,6 @@ payload:
   - '+.jakting.com'
   - '+.jalan.space'
   - '+.jalorsoft.com'
-  - '+.jals1rfsfo.com'
   - '+.jamespan.me'
   - '+.jamidol.com'
   - '+.jammyfm.com'
@@ -33021,7 +33006,6 @@ payload:
   - '+.jiasuba.com'
   - '+.jiasubook.com'
   - '+.jiasudu666.com'
-  - '+.jiasuhui.com'
   - '+.jiasule.com'
   - '+.jiasule.net'
   - '+.jiasule.org'
@@ -33709,7 +33693,6 @@ payload:
   - '+.jjjtimes.com'
   - '+.jjkeq.com'
   - '+.jjkk.org'
-  - '+.jjklife.com'
   - '+.jjkucunxie.com'
   - '+.jjldbk.com'
   - '+.jjlsd.com'
@@ -34378,7 +34361,6 @@ payload:
   - '+.juc365.com'
   - '+.jucanw.com'
   - '+.jucelin.com'
-  - '+.juchang.com'
   - '+.jucheng01.net'
   - '+.juchuangbio.com'
   - '+.jucong.com'
@@ -36013,7 +35995,6 @@ payload:
   - '+.ku6.net'
   - '+.ku6cdn.com'
   - '+.ku6img.com'
-  - '+.ku6vms.com'
   - '+.ku82.com'
   - '+.ku86.com'
   - '+.ku8ku8.com'
@@ -37030,7 +37011,6 @@ payload:
   - '+.leiouxiong.com'
   - '+.leipengkai.com'
   - '+.leiphone.com'
-  - '+.leipi.org'
   - '+.leiqunjs.com'
   - '+.leirenw.com'
   - '+.leishen-lidar.com'
@@ -37570,7 +37550,6 @@ payload:
   - '+.likingfit.com'
   - '+.likuli.com'
   - '+.likuso.com'
-  - '+.lili1996.com'
   - '+.lilifenxiang1.com'
   - '+.lilinwei.com'
   - '+.lilishare.com'
@@ -37769,6 +37748,7 @@ payload:
   - '+.linuxcool.com'
   - '+.linuxdaxue.com'
   - '+.linuxde.net'
+  - '+.linuxdiyf.com'
   - '+.linuxdot.net'
   - '+.linuxdown.net'
   - '+.linuxea.com'
@@ -37805,6 +37785,7 @@ payload:
   - '+.linzhuotech.com'
   - '+.linzhuxin.com'
   - '+.linzl.com'
+  - '+.lion1ou.tech'
   - '+.lionaka.com'
   - '+.lionelliu.com'
   - '+.lionmobo.com'
@@ -38103,6 +38084,7 @@ payload:
   - '+.lljgame.com'
   - '+.lljgxx.com'
   - '+.llku.com'
+  - '+.llqdh.com'
   - '+.lls.moe'
   - '+.llsapp.com'
   - '+.llscdn.com'
@@ -39204,6 +39186,7 @@ payload:
   - '+.madouka.com'
   - '+.madown.com'
   - '+.madserving.com'
+  - '+.maemo.cc'
   - '+.mafangwo.com'
   - '+.mafenggo.com'
   - '+.mafengs.com'
@@ -40540,7 +40523,6 @@ payload:
   - '+.mingin.com'
   - '+.mingjian.com'
   - '+.mingjinglu.com'
-  - '+.mingjiufu.com'
   - '+.minglian.com'
   - '+.mingliu8.com'
   - '+.mingliwenhua.com'
@@ -42139,7 +42121,6 @@ payload:
   - '+.neituixiaowangzi.com'
   - '+.nelkshuhe.com'
   - '+.nellit.net'
-  - '+.nemosdo.com'
   - '+.nengapp.com'
   - '+.nenggeimall.com'
   - '+.nengshida.com'
@@ -43490,7 +43471,6 @@ payload:
   - '+.openresty.org'
   - '+.openrice.com'
   - '+.opensc.co'
-  - '+.opensc.net'
   - '+.openset.wang'
   - '+.opensoce.com'
   - '+.openthos.com'
@@ -44481,7 +44461,6 @@ payload:
   - '+.piantou.net'
   - '+.pianwan.com'
   - '+.pianyim.com'
-  - '+.pianyini.com'
   - '+.pianyit.com'
   - '+.pianyiwan.com'
   - '+.pianyuan.net'
@@ -45282,6 +45261,7 @@ payload:
   - '+.purecpp.org'
   - '+.pureh2b.com'
   - '+.purenyy.com'
+  - '+.puronglong.com'
   - '+.puroyal.com'
   - '+.pusa123.com'
   - '+.push2u.com'
@@ -45369,6 +45349,7 @@ payload:
   - '+.pysmei.com'
   - '+.pystarter.com'
   - '+.pytgo.com'
+  - '+.python-china.com'
   - '+.python88.com'
   - '+.pythonav.com'
   - '+.pythonclub.org'
@@ -46358,6 +46339,7 @@ payload:
   - '+.qnl1.com'
   - '+.qnmlgb.tech'
   - '+.qnmsq.com'
+  - '+.qnqcdn.com'
   - '+.qnqcdn.net'
   - '+.qnsb.com'
   - '+.qnsdk.com'
@@ -49217,7 +49199,6 @@ payload:
   - '+.shayangnala.com'
   - '+.shayugg.com'
   - '+.shayujizhang.com'
-  - '+.shbaibai.com'
   - '+.shbaimeng.com'
   - '+.shbangde.com'
   - '+.shbars.com'
@@ -49688,7 +49669,6 @@ payload:
   - '+.shoot.photo'
   - '+.shootmedia.net'
   - '+.shop.globalsign.com'
-  - '+.shop123.com'
   - '+.shop2255.com'
   - '+.shop2cn.com'
   - '+.shopbackdrop.com'
@@ -52138,7 +52118,6 @@ payload:
   - '+.sxprgc.com'
   - '+.sxpta.com'
   - '+.sxpyzg.com'
-  - '+.sxqns.com'
   - '+.sxrb.com'
   - '+.sxrbw.com'
   - '+.sxrczx.com'
@@ -52307,7 +52286,6 @@ payload:
   - '+.sz5156.com'
   - '+.sz5983.com'
   - '+.sz61.com'
-  - '+.sz68.com'
   - '+.sz7h.com'
   - '+.sz836.com'
   - '+.sz886.com'
@@ -53150,7 +53128,6 @@ payload:
   - '+.tech2ipo.com'
   - '+.techan.com'
   - '+.techantong.net'
-  - '+.techaxiang.net'
   - '+.techbeat.net'
   - '+.techbrood.com'
   - '+.techeme.net'
@@ -54277,7 +54254,6 @@ payload:
   - '+.toumiao.com'
   - '+.toupb.com'
   - '+.toupiaoapp.com'
-  - '+.touqikan.com'
   - '+.tour110.com'
   - '+.tourhr.com'
   - '+.tourjob.net'
@@ -56428,6 +56404,7 @@ payload:
   - '+.vokop.com'
   - '+.vol.moe'
   - '+.volccdn.com'
+  - '+.volcgslb.com'
   - '+.volcgtm.com'
   - '+.volchina.com'
   - '+.volcimagex.net'
@@ -57269,7 +57246,6 @@ payload:
   - '+.webmagic.io'
   - '+.webmeng.net'
   - '+.webmulu.com'
-  - '+.webnovel.com'
   - '+.webok.me'
   - '+.webond.net'
   - '+.weboss.hk'
@@ -57646,6 +57622,7 @@ payload:
   - '+.wenancehua.com'
   - '+.wenancn.com'
   - '+.wenangou.com'
+  - '+.wenanzhe.com'
   - '+.wenbita.net'
   - '+.wenbo.cc'
   - '+.wencaischool.com'
@@ -58777,7 +58754,6 @@ payload:
   - '+.wordpress.la'
   - '+.wordpresshy.com'
   - '+.wordscan.net'
-  - '+.work28.com'
   - '+.workchat.com'
   - '+.workec.com'
   - '+.workehr.com'
@@ -63176,7 +63152,6 @@ payload:
   - '+.yinher.com'
   - '+.yinheyuedu.com'
   - '+.yinhu.com'
-  - '+.yini.me'
   - '+.yini.org'
   - '+.yinjiaji.com'
   - '+.yinjietd.com'
@@ -63337,7 +63312,6 @@ payload:
   - '+.yiwan.com'
   - '+.yiwanggo.net'
   - '+.yiwangml.com'
-  - '+.yiwanng.com'
   - '+.yiwanzhushou.com'
   - '+.yiwealth.com'
   - '+.yiweb.com'
@@ -63465,7 +63439,6 @@ payload:
   - '+.yjscloud.com'
   - '+.yjsjl.org'
   - '+.yjwujian.com'
-  - '+.yjxqy.com'
   - '+.yjxsoft.com'
   - '+.yjyghb.com'
   - '+.yjz9.com'
@@ -64450,6 +64423,7 @@ payload:
   - '+.yuego.net'
   - '+.yuegowu.com'
   - '+.yuehuzhi.com'
+  - '+.yueimg.com'
   - '+.yueji.com'
   - '+.yuejianzun.xyz'
   - '+.yuejiayan.com'
@@ -64980,7 +64954,6 @@ payload:
   - '+.yxdwj.com'
   - '+.yxecg.com'
   - '+.yxen.net'
-  - '+.yxfanfan.com'
   - '+.yxfw.com'
   - '+.yxfwai.com'
   - '+.yxhenan.com'
