--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1490,6 +1490,7 @@ payload:
   - '+.166.net'
   - '+.166161.com'
   - '+.1666.com'
+  - '+.1669la.com'
   - '+.166cai.com'
   - '+.166ks.net'
   - '+.166sh.com'
@@ -2390,7 +2391,6 @@ payload:
   - '+.2345daohang.com'
   - '+.2345download.com'
   - '+.2345ff.com'
-  - '+.2345kankan.com'
   - '+.2345licai.com'
   - '+.2345mbrowser.com'
   - '+.2345soso.com'
@@ -4609,7 +4609,6 @@ payload:
   - '+.520.com'
   - '+.520.net'
   - '+.5200.net'
-  - '+.52004.net'
   - '+.5200cc.com'
   - '+.5200e.com'
   - '+.5200wx.com'
@@ -5558,8 +5557,6 @@ payload:
   - '+.6122.net'
   - '+.612345.com'
   - '+.612459.com'
-  - '+.6132823.com'
-  - '+.6132979.com'
   - '+.6137.net'
   - '+.615c.com'
   - '+.61611.net'
@@ -6159,8 +6156,6 @@ payload:
   - '+.7789.com'
   - '+.778buy.cc'
   - '+.778buy.com'
-  - '+.77927nn.com'
-  - '+.77927tt.com'
   - '+.7794.com'
   - '+.77991.com'
   - '+.7799520.com'
@@ -6204,6 +6199,7 @@ payload:
   - '+.789msw.com'
   - '+.789zy.cc'
   - '+.78bar.com'
+  - '+.78books.com'
   - '+.78dian.com'
   - '+.78diy.com'
   - '+.78dm.net'
@@ -8101,6 +8097,7 @@ payload:
   - '+.adminxy.com'
   - '+.admire.so'
   - '+.admpub.com'
+  - '+.admqr.com'
   - '+.adnineplus.com'
   - '+.adnmb.com'
   - '+.adnmb1.com'
@@ -8296,6 +8293,7 @@ payload:
   - '+.ahhhjx.com'
   - '+.ahhouse.com'
   - '+.ahhtzx.com'
+  - '+.ahhwdp.com'
   - '+.ahhxcm.com'
   - '+.ahjdq.com'
   - '+.ahjem.com'
@@ -8626,6 +8624,7 @@ payload:
   - '+.aitiancheng.com'
   - '+.aitoushe.com'
   - '+.aitrans.net'
+  - '+.aitsw.com'
   - '+.aituan.com'
   - '+.aitupian.com'
   - '+.aituwo.com'
@@ -8690,7 +8689,6 @@ payload:
   - '+.aiyou.tv'
   - '+.aiyouman.com'
   - '+.aiyoumi.com'
-  - '+.aiyouxi07.vip'
   - '+.aiyoweia.com'
   - '+.aiyuangong.com'
   - '+.aiyuke.com'
@@ -9341,7 +9339,6 @@ payload:
   - '+.anxiu.com'
   - '+.anxiw.com'
   - '+.anxjm.com'
-  - '+.anxnr.com'
   - '+.anxz.com'
   - '+.any123.com'
   - '+.any8.com'
@@ -9676,6 +9673,7 @@ payload:
   - '+.aqzyzx.com'
   - '+.ar-max.com'
   - '+.aragexpo.com'
+  - '+.arapp.online'
   - '+.arayzou.com'
   - '+.arc-uds.com'
   - '+.arcas-da.com'
@@ -11338,6 +11336,7 @@ payload:
   - '+.bhgmarketplace.com'
   - '+.bhgxq.com'
   - '+.bhhgallery.com'
+  - '+.bhjck.com'
   - '+.bhjysp.com'
   - '+.bhk.mobi'
   - '+.bhnsh.com'
@@ -11832,7 +11831,6 @@ payload:
   - '+.bjchild.com'
   - '+.bjcifco.net'
   - '+.bjckkj.com'
-  - '+.bjcloud.net'
   - '+.bjcls.net'
   - '+.bjcma.com'
   - '+.bjcoco.com'
@@ -12177,6 +12175,7 @@ payload:
   - '+.blqx.com'
   - '+.blqy.com'
   - '+.blskye.com'
+  - '+.blszhifa.com'
   - '+.blue-city.com'
   - '+.blue-zero.com'
   - '+.bluebeebox.com'
@@ -12368,6 +12367,7 @@ payload:
   - '+.bongv.com'
   - '+.bongwell.com'
   - '+.bonkee.net'
+  - '+.bonnelivre.com'
   - '+.bonree.com'
   - '+.bonsj.com'
   - '+.bonwai.com'
@@ -16166,6 +16166,7 @@ payload:
   - '+.cmdb.xyz'
   - '+.cmdrh.com'
   - '+.cmdschool.org'
+  - '+.cmdw.vip'
   - '+.cmdy2020.com'
   - '+.cmechina.net'
   - '+.cmejob.com'
@@ -16548,7 +16549,6 @@ payload:
   - '+.cnipr.com'
   - '+.cnisland.com'
   - '+.cnisp.org'
-  - '+.cnispunion.org'
   - '+.cnit-research.com'
   - '+.cnitblog.com'
   - '+.cniteyes.com'
@@ -16866,7 +16866,6 @@ payload:
   - '+.cnzhiyuanhui.com'
   - '+.cnzjol.com'
   - '+.cnzlapp.com'
-  - '+.cnzmyn.com'
   - '+.cnzsqh.com'
   - '+.cnzsyz.com'
   - '+.cnzweal.com'
@@ -16874,6 +16873,7 @@ payload:
   - '+.cnzyao.com'
   - '+.cnzz.com'
   - '+.cnzz.net'
+  - '+.cnzznn.com'
   - '+.cnzznz.com'
   - '+.co-effort.com'
   - '+.co-inclusion.org'
@@ -17377,6 +17377,7 @@ payload:
   - '+.cqkeb.com'
   - '+.cqkhg.com'
   - '+.cqkjwx.com'
+  - '+.cqklsm.com'
   - '+.cqkqinfo.com'
   - '+.cqkundian.com'
   - '+.cqkx.com'
@@ -18336,7 +18337,6 @@ payload:
   - '+.dailianzj.com'
   - '+.dailiba.com'
   - '+.dailijizhang.cc'
-  - '+.dailimao.net'
   - '+.dailiqing.net'
   - '+.dailnkm.com'
   - '+.dailuopan.com'
@@ -18808,7 +18808,6 @@ payload:
   - '+.dcsdn.com'
   - '+.dcsjw.com'
   - '+.dcsme.org'
-  - '+.dctxf.com'
   - '+.dcv.so'
   - '+.dcwj168.com'
   - '+.dcxnews.com'
@@ -19232,7 +19231,6 @@ payload:
   - '+.dgyuanyi.com'
   - '+.dgzhihongjx.com'
   - '+.dgzhisen.com'
-  - '+.dgzhuorui.com'
   - '+.dgzj.com'
   - '+.dgzsgjg.com'
   - '+.dgzz1.com'
@@ -20401,6 +20399,7 @@ payload:
   - '+.dropboxchina.com'
   - '+.dropsec.xyz'
   - '+.drouma.com'
+  - '+.drpneu.com'
   - '+.drscrewdriver.com'
   - '+.drtyf.com'
   - '+.drugfuture.com'
@@ -20723,6 +20722,7 @@ payload:
   - '+.dwjoy.com'
   - '+.dwmoniqi.com'
   - '+.dwntme.com'
+  - '+.dwnxy.com'
   - '+.dwq.com'
   - '+.dwqcw.com'
   - '+.dwrh.net'
@@ -23079,7 +23079,6 @@ payload:
   - '+.fenleitong.com'
   - '+.fenliu.net'
   - '+.fennessy.hk'
-  - '+.fenq.com'
   - '+.fenqihome.com'
   - '+.fenqile.com'
   - '+.fenqix.com'
@@ -23262,6 +23261,7 @@ payload:
   - '+.firetry.com'
   - '+.firhq.com'
   - '+.firoyang.org'
+  - '+.firshort.com'
   - '+.firstdrs.com'
   - '+.firstfood-cn.com'
   - '+.firstgw.com'
@@ -23626,7 +23626,6 @@ payload:
   - '+.fotoplace.cc'
   - '+.fotosay.com'
   - '+.fototuan.com'
-  - '+.fotuozhengfa.com'
   - '+.foufu.com'
   - '+.fouleide.com'
   - '+.founder.com'
@@ -24600,6 +24599,7 @@ payload:
   - '+.gds66f.com'
   - '+.gdscse.net'
   - '+.gdscw.com'
+  - '+.gdsincom.com'
   - '+.gdsoq.com'
   - '+.gdsports.net'
   - '+.gdsrcw.com'
@@ -25148,7 +25148,6 @@ payload:
   - '+.glvs.com'
   - '+.glxlawyer.com'
   - '+.glyf168.com'
-  - '+.glyh.org'
   - '+.glzhuang.com'
   - '+.glzip.com'
   - '+.glzj88.com'
@@ -25190,8 +25189,10 @@ payload:
   - '+.gmt-china.org'
   - '+.gmtv.cc'
   - '+.gmugmu.com'
+  - '+.gmwtp.com'
   - '+.gmwuf.com'
   - '+.gmyl.com'
+  - '+.gmzhushou.com'
   - '+.gmzi.com'
   - '+.gn00.com'
   - '+.gn168.com'
@@ -27051,6 +27052,7 @@ payload:
   - '+.haoshiqi.net'
   - '+.haoshsh.com'
   - '+.haoshunjx.com'
+  - '+.haoshuo.com'
   - '+.haosijia.com'
   - '+.haosijia.vip'
   - '+.haosix.com'
@@ -27933,7 +27935,6 @@ payload:
   - '+.hftfund.com'
   - '+.hftogo.com'
   - '+.hftycj.com'
-  - '+.hfun.me'
   - '+.hfwx.net'
   - '+.hfx.link'
   - '+.hfx.net'
@@ -28522,7 +28523,6 @@ payload:
   - '+.hnxmxit.com'
   - '+.hnxuntang.com'
   - '+.hnxyjt.com'
-  - '+.hnycsk.com'
   - '+.hnydmq.com'
   - '+.hnyfkj.com'
   - '+.hnyh.net'
@@ -28566,7 +28566,6 @@ payload:
   - '+.holdhr.com'
   - '+.holdsteel.com'
   - '+.holegots.com'
-  - '+.holidays5.com'
   - '+.holiland.com'
   - '+.holleykingkong.com'
   - '+.hollischuang.com'
@@ -28674,7 +28673,6 @@ payload:
   - '+.hongtongad.com'
   - '+.hongtu.net'
   - '+.hongtuwang.com'
-  - '+.hongweipeng.com'
   - '+.hongxiaolong.com'
   - '+.hongxin18.com'
   - '+.hongxinbao.com'
@@ -32223,6 +32221,7 @@ payload:
   - '+.ixiaowai.com'
   - '+.ixiatxt.com'
   - '+.ixibeiren.com'
+  - '+.ixieme.com'
   - '+.ixigua.com'
   - '+.ixiguan.com'
   - '+.ixiguavideo.com'
@@ -33305,7 +33304,6 @@ payload:
   - '+.jingwei.com'
   - '+.jingwei.link'
   - '+.jingwentian.com'
-  - '+.jingwuhotel.com'
   - '+.jingwuhui.com'
   - '+.jingxi.com'
   - '+.jingxialai.com'
@@ -34895,11 +34893,6 @@ payload:
   - '+.k8bd.com'
   - '+.k8dream.com'
   - '+.k8jdw.com'
-  - '+.k8kkoo.com'
-  - '+.k8kkpp.com'
-  - '+.k8kkqq.com'
-  - '+.k8kkrr.com'
-  - '+.k8kkss.com'
   - '+.k8sj.com'
   - '+.k8smeetup.com'
   - '+.k8stech.net'
@@ -35008,6 +35001,7 @@ payload:
   - '+.kamidm.com'
   - '+.kamidox.com'
   - '+.kamopos.com'
+  - '+.kan.cc'
   - '+.kan0512.com'
   - '+.kan300.com'
   - '+.kan84.net'
@@ -36373,6 +36367,7 @@ payload:
   - '+.kyyj.net'
   - '+.kyzf.net'
   - '+.kyzyj.com'
+  - '+.kza.cc'
   - '+.kzj365.com'
   - '+.kzlgd.com'
   - '+.kzore.com'
@@ -38890,9 +38885,6 @@ payload:
   - '+.lw208.com'
   - '+.lw23.com'
   - '+.lw54.com'
-  - '+.lw85.com'
-  - '+.lw880.com'
-  - '+.lw881.com'
   - '+.lwcj.com'
   - '+.lwd3699.com'
   - '+.lwdjc.com'
@@ -38903,7 +38895,6 @@ payload:
   - '+.lwfjmj.com'
   - '+.lwgsw.com'
   - '+.lwhouse.com'
-  - '+.lwinfo.com'
   - '+.lwinl.com'
   - '+.lwinst.com'
   - '+.lwkz.cc'
@@ -39989,6 +39980,7 @@ payload:
   - '+.meishi13.com'
   - '+.meishichina.com'
   - '+.meishij.net'
+  - '+.meishijr.com'
   - '+.meishilife.com'
   - '+.meishiqin.com'
   - '+.meishiwangluo.com'
@@ -41419,7 +41411,6 @@ payload:
   - '+.murl.tv'
   - '+.muryi.net'
   - '+.muse-ui.org'
-  - '+.muse100.com'
   - '+.mushafa.net'
   - '+.mushapi.com'
   - '+.mushroomchina.com'
@@ -41856,7 +41847,6 @@ payload:
   - '+.n9z.net'
   - '+.naadou.com'
   - '+.nadianshi.com'
-  - '+.naew.org'
   - '+.nafanlong.com'
   - '+.nagain.com'
   - '+.nagcloudcs.com'
@@ -41925,7 +41915,6 @@ payload:
   - '+.nanjingkaishan.com'
   - '+.nanjingtianqi114.com'
   - '+.nanjingui.com'
-  - '+.nanjishidu.me'
   - '+.nanjixiong.com'
   - '+.nankaimba.org'
   - '+.nanlebbs.com'
@@ -42099,6 +42088,7 @@ payload:
   - '+.nduoa.com'
   - '+.nduotuan.com'
   - '+.ndvs87d.com'
+  - '+.ndzsx.com'
   - '+.ne21.com'
   - '+.neaechina.com'
   - '+.nearcharge.com'
@@ -42984,7 +42974,6 @@ payload:
   - '+.nxgjbyy.com'
   - '+.nxgqt.org'
   - '+.nxgtjt.com'
-  - '+.nxhh.net'
   - '+.nxhscxkj.com'
   - '+.nxin.com'
   - '+.nxit.us'
@@ -44122,6 +44111,7 @@ payload:
   - '+.pcbbbs.com'
   - '+.pcbdoor.com'
   - '+.pcben.com'
+  - '+.pcbeta.com'
   - '+.pcbhunt.com'
   - '+.pcbiot.com'
   - '+.pcbjob.com'
@@ -44361,7 +44351,6 @@ payload:
   - '+.phida.net'
   - '+.philipswechat.com'
   - '+.philm.cc'
-  - '+.philosophypeople.com'
   - '+.phlexing.com'
   - '+.phnamedns.com'
   - '+.phnixpool.com'
@@ -44785,7 +44774,6 @@ payload:
   - '+.pldba.com'
   - '+.plesk-cn.com'
   - '+.plexjiasuqi.com'
-  - '+.plmulu.com'
   - '+.plob.org'
   - '+.plotcup.com'
   - '+.plpeng.xin'
@@ -44968,6 +44956,7 @@ payload:
   - '+.powerxene.com'
   - '+.powzamedia.com'
   - '+.poxiaotv.com'
+  - '+.pozou.com'
   - '+.pp-sp.com'
   - '+.pp-xxgd.com'
   - '+.pp.cc'
@@ -46438,7 +46427,6 @@ payload:
   - '+.qqjay.com'
   - '+.qqje.com'
   - '+.qqjia.com'
-  - '+.qqjishu.cc'
   - '+.qqjishuwang.com'
   - '+.qqjjsj.com'
   - '+.qqju.com'
@@ -46494,7 +46482,6 @@ payload:
   - '+.qqtss.net'
   - '+.qqttxx.com'
   - '+.qqtu8.com'
-  - '+.qqtu8.net'
   - '+.qqtz.com'
   - '+.qqu.cc'
   - '+.qqumall.com'
@@ -46650,7 +46637,6 @@ payload:
   - '+.quanmama.com'
   - '+.quanmamaimg.com'
   - '+.quanmeipai.com'
-  - '+.quanmeishi.com'
   - '+.quanmin.la'
   - '+.quanmin.tv'
   - '+.quanmin110.com'
@@ -47032,7 +47018,6 @@ payload:
   - '+.r5tao.com'
   - '+.r77777777.com'
   - '+.r9q6.vip'
-  - '+.r9t1.com'
   - '+.rabbitpre.com'
   - '+.rabbitpre.me'
   - '+.race604.com'
@@ -49650,7 +49635,6 @@ payload:
   - '+.shmog.org'
   - '+.shmulan.com'
   - '+.shmusic.org'
-  - '+.shmuzu.com'
   - '+.shmxcz.org'
   - '+.shmy365.com'
   - '+.shmyapi.com'
@@ -49743,6 +49727,7 @@ payload:
   - '+.shouyoujz.com'
   - '+.shouyouqianxian.com'
   - '+.shouyouribao.com'
+  - '+.shouyoushenqi.com'
   - '+.shouyoutan.com'
   - '+.shouyoutv.com'
   - '+.shouyouzhijia.net'
@@ -50467,6 +50452,7 @@ payload:
   - '+.sjhgo.com'
   - '+.sjhl.cc'
   - '+.sjhy.net'
+  - '+.sjifm.com'
   - '+.sjlqgg.com'
   - '+.sjm.life'
   - '+.sjmdh.com'
@@ -51066,7 +51052,6 @@ payload:
   - '+.sooshu.net'
   - '+.soosmart.com'
   - '+.sootoo.com'
-  - '+.sootuu.com'
   - '+.sooxue.com'
   - '+.sooyooj.com'
   - '+.sooyuu.com'
@@ -51110,7 +51095,6 @@ payload:
   - '+.sosuo.name'
   - '+.sotemall.com'
   - '+.sothink.com'
-  - '+.sotuiwang.com'
   - '+.sotwm.com'
   - '+.sou-yun.com'
   - '+.sou94.com'
@@ -52117,6 +52101,7 @@ payload:
   - '+.sxnycl.com'
   - '+.sxnyzs.com'
   - '+.sxol.com'
+  - '+.sxpdf.com'
   - '+.sxpdk.com'
   - '+.sxpjp.com'
   - '+.sxplc.com'
@@ -53440,6 +53425,7 @@ payload:
   - '+.thmz.com'
   - '+.thn21.com'
   - '+.thoughtworkers.org'
+  - '+.thrbs.com'
   - '+.threadcn.com'
   - '+.threegorgestours.com'
   - '+.threeol.com'
@@ -54039,7 +54025,6 @@ payload:
   - '+.tom.cat'
   - '+.tom.com'
   - '+.tom163.net'
-  - '+.tom18.net'
   - '+.tom61.com'
   - '+.tomap.me'
   - '+.tomatolei.com'
@@ -54776,7 +54761,6 @@ payload:
   - '+.tuistone.com'
   - '+.tuitiger.com'
   - '+.tuitui99.com'
-  - '+.tuituifang.com'
   - '+.tuituitang.com'
   - '+.tuiwailian.com'
   - '+.tuixue.online'
@@ -56903,7 +56887,6 @@ payload:
   - '+.wanguoschool.net'
   - '+.wanguotong.com'
   - '+.wangwango.com'
-  - '+.wangweicloud.com'
   - '+.wangwenda.com'
   - '+.wangwo.net'
   - '+.wangxc.club'
@@ -57271,6 +57254,7 @@ payload:
   - '+.webshao.com'
   - '+.webshu.com'
   - '+.webshu.net'
+  - '+.websjcdn.com'
   - '+.websjx.com'
   - '+.websjy.com'
   - '+.websocket-test.com'
@@ -59431,7 +59415,6 @@ payload:
   - '+.wysaid.org'
   - '+.wysap.com'
   - '+.wysfgc.com'
-  - '+.wysjmcb.com'
   - '+.wysls.com'
   - '+.wysww.vip'
   - '+.wytfsp.com'
@@ -60502,6 +60485,7 @@ payload:
   - '+.xibao100.com'
   - '+.xibeicanyin.com'
   - '+.xibeidev.com'
+  - '+.xibojiaoyu.com'
   - '+.xibsteel.com'
   - '+.xibu168.com'
   - '+.xibulaobohui.com'
@@ -60793,6 +60777,7 @@ payload:
   - '+.xinhuayimin.com'
   - '+.xinhuazhiyun.com'
   - '+.xinhuipihua.com'
+  - '+.xinhuoshuguan.com'
   - '+.xinhushang.org'
   - '+.xiniu.com'
   - '+.xiniu1688.com'
@@ -61537,7 +61522,6 @@ payload:
   - '+.xsjsource.com'
   - '+.xsjtxt.com'
   - '+.xsjwyx.com'
-  - '+.xsjx.net'
   - '+.xskhome.com'
   - '+.xskyx.net'
   - '+.xslb.me'
@@ -61587,7 +61571,6 @@ payload:
   - '+.xtc-edu.com'
   - '+.xtcaq.com'
   - '+.xtcrm.com'
-  - '+.xtctp.com'
   - '+.xtdpye.com'
   - '+.xtea.org'
   - '+.xtedu.com'
@@ -61983,6 +61966,7 @@ payload:
   - '+.xxxxxbbs.com'
   - '+.xxxzzlm.org'
   - '+.xxycw.com'
+  - '+.xxyfgy.com'
   - '+.xxyhzd.com'
   - '+.xxyo.com'
   - '+.xxyw.com'
@@ -63120,6 +63104,7 @@ payload:
   - '+.yingtaoai.com'
   - '+.yingtaosiyue.com'
   - '+.yingtaoyun.com'
+  - '+.yingtongsz.com'
   - '+.yingucaifu.com'
   - '+.yingujr.com'
   - '+.yinguobing.com'
@@ -65069,7 +65054,6 @@ payload:
   - '+.yylm.org'
   - '+.yylmz.com'
   - '+.yymedias.com'
-  - '+.yymh999.com'
   - '+.yyming2.com'
   - '+.yymoban.com'
   - '+.yyny.me'
@@ -65158,7 +65142,6 @@ payload:
   - '+.yzrom.com'
   - '+.yzs.com'
   - '+.yzspdq.com'
-  - '+.yzsqxx.com'
   - '+.yzt-tools.com'
   - '+.yztcdn.com'
   - '+.yzwb.com'
@@ -65557,7 +65540,6 @@ payload:
   - '+.zgchawang.net'
   - '+.zgchrx.com'
   - '+.zgcicc.com'
-  - '+.zgcidsf.org'
   - '+.zgcindex.org'
   - '+.zgcjm.org'
   - '+.zgcjpx.com'
@@ -67921,7 +67903,6 @@ payload:
   - '+.zyzaojiao.com'
   - '+.zyzg.com'
   - '+.zyzhan.com'
-  - '+.zyzhang.com'
   - '+.zyzhyl.com'
   - '+.zyzj.org'
   - '+.zyzj360.com'
