--- a/directbak.yaml
+++ b/directbak.yaml
@@ -11041,6 +11041,7 @@ payload:
   - '+.beevideo.tv'
   - '+.beeweart.com'
   - '+.begcl.com'
+  - '+.begindcc.com'
   - '+.bego.cc'
   - '+.begoto.com'
   - '+.begowin.com'
@@ -12627,7 +12628,7 @@ payload:
   - '+.btdad.live'
   - '+.btdog.com'
   - '+.btege.com'
-  - '+.btfan.com'
+  - '+.btgame.com'
   - '+.btgame01.com'
   - '+.btgang.com'
   - '+.btglotto.com'
@@ -24948,6 +24949,7 @@ payload:
   - '+.ghsmpwalmart.com'
   - '+.ght.me'
   - '+.ghui.me'
+  - '+.ghwgame.com'
   - '+.ghxi.com'
   - '+.ghyg.com'
   - '+.ghzhushou.com'
@@ -25178,6 +25180,7 @@ payload:
   - '+.gmiot.net'
   - '+.gmjk.com'
   - '+.gmm01.com'
+  - '+.gmmch5.com'
   - '+.gmmicro.com'
   - '+.gmmsj.com'
   - '+.gmonline-all.com'
@@ -26426,6 +26429,7 @@ payload:
   - '+.gzzhitu.com'
   - '+.gzzkzsw.com'
   - '+.gzzlfw.com'
+  - '+.gzzlgame.com'
   - '+.gzzoc.com'
   - '+.gzzongsi.com'
   - '+.gzzoo.com'
@@ -33556,6 +33560,7 @@ payload:
   - '+.jiujiuyingshi.com'
   - '+.jiujiuyunhui.com'
   - '+.jiuku.com'
+  - '+.jiulesy.com'
   - '+.jiulingwan.com'
   - '+.jiulishi.com'
   - '+.jiumaojiu.com'
@@ -36367,6 +36372,7 @@ payload:
   - '+.kyyj.net'
   - '+.kyzf.net'
   - '+.kyzyj.com'
+  - '+.kz8yx.com'
   - '+.kza.cc'
   - '+.kzj365.com'
   - '+.kzlgd.com'
@@ -37234,7 +37240,6 @@ payload:
   - '+.lfidc.net'
   - '+.lfkjgh.com'
   - '+.lfksqzj.com'
-  - '+.lfl.gg'
   - '+.lflucky.com'
   - '+.lfork.com'
   - '+.lfppt.com'
@@ -37849,6 +37854,7 @@ payload:
   - '+.little-sun.com'
   - '+.littleboy.net'
   - '+.littleee.com'
+  - '+.littlehero.xyz'
   - '+.littlekid.online'
   - '+.littleroost.net'
   - '+.littlesheep.com'
@@ -40675,6 +40681,7 @@ payload:
   - '+.mj85.com'
   - '+.mjasoft.com'
   - '+.mjceo.com'
+  - '+.mjh5.com'
   - '+.mjia.cc'
   - '+.mjjcn.com'
   - '+.mjjq.com'
@@ -48532,6 +48539,7 @@ payload:
   - '+.sdkclick.com'
   - '+.sdkclickurl.com'
   - '+.sdklh.com'
+  - '+.sdknext.com'
   - '+.sdksrv.com'
   - '+.sdlangkun.com'
   - '+.sdlgzy.com'
@@ -50720,6 +50728,7 @@ payload:
   - '+.smgstar.com'
   - '+.smhdoto.com'
   - '+.smhom1.com'
+  - '+.smhyplay.com'
   - '+.smianet.com'
   - '+.smic-sh.com'
   - '+.smics.com'
@@ -56740,6 +56749,7 @@ payload:
   - '+.wan5d.com'
   - '+.wan68.com'
   - '+.wan7.xin'
+  - '+.wan73.com'
   - '+.wan76.com'
   - '+.wan77.com'
   - '+.wan8.com'
@@ -59351,6 +59361,7 @@ payload:
   - '+.wxmama.com'
   - '+.wxmcgz.com'
   - '+.wxmetro.net'
+  - '+.wxmolegames.com'
   - '+.wxmovie.com'
   - '+.wxnacy.com'
   - '+.wxngh.com'
@@ -63431,6 +63442,7 @@ payload:
   - '+.yjs111.com'
   - '+.yjscloud.com'
   - '+.yjsjl.org'
+  - '+.yjwlo.com'
   - '+.yjwujian.com'
   - '+.yjxsoft.com'
   - '+.yjyghb.com'
